# agent-skills

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  dev-skill.sh  restore-skill.sh  ruff.toml  setup.sh  undev-skill.sh
create-repo/: CLAUDE.md  SKILL.md  pyproject.toml
create-repo/eval/: run_eval.py
create-repo/scripts/: init_git.py  preflight.py  resolve_versions.py  scaffold.py  verify.py
create-repo/templates/common/: .env.example.j2  CLAUDE.md.j2
create-repo/templates/common/.github/: pull_request_template.md
create-repo/templates/fullstack-ts/: package.json.j2  turbo.json
create-repo/tests/: test_eval.py  test_init_git.py  test_preflight.py  test_scaffold.py
skills/create-repo/: .gitignore  CLAUDE.md  SKILL.md  pyproject.toml
skills/create-repo/.claude/rules/: parity.md
skills/create-repo/eval/: models.py  run_eval.py
skills/create-repo/eval/checks/: check_structure.py
skills/create-repo/scripts/: context.sh  find_repo_home.py  init_git.py  list_templates.py  preflight.py  resolve_versions.py  scaffold.py  verify.py
skills/create-repo/templates/__common/: .gitignore  CLAUDE.md.j2
skills/create-repo/templates/api-python/: justfile.j2  pyproject.toml.j2  template.json
skills/create-repo/tests/: test_eval.py  test_find_repo_home.py  test_init_git.py  test_preflight.py  test_resolve_versions.py  test_scaffold.py  test_verify.py
skills/solve-take-home/: .gitignore  SKILL.md  pyproject.toml
skills/solve-take-home/eval/: __main__.py  models.py  rubric.json  run_eval.py
skills/solve-take-home/references/: eval-criteria.md
(+303 files in other folders)
