[project]
name = "create-repo"
version = "0.1.0"
description = "Project scaffolding scripts for the create-repo skill"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
