[project]
name = "solve-take-home"
version = "0.1.0"
description = "Eval framework for the solve-take-home skill"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval"]

[tool.pytest.ini_options]
testpaths = ["eval"]
